# eeg-preprocessing-pipeline

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default_config.yaml
docs/: notebook_reference_status.md  preprocessing_design.md
examples/: run_pipeline.py
notebooks/: demo.ipynb
src/eeg_pipeline/: __init__.py  annotations.py  bad_channels.py  batch.py  cli.py  config.py  demo.py  epoch_rejection.py  epoching.py  events.py  filtering.py  ica.py  interpolation.py  io.py  line_noise.py  loader.py  metrics.py  montage.py  pipeline.py  preprocessing.py  quality_metrics.py  records.py  reference.py  report.py  reports.py  rereference.py  resampling.py  safety.py  spectral.py  utils.py  visualization.py
tests/: __init__.py  test_annotations.py  test_bad_channels.py  test_batch.py  test_cli_api.py  test_config_and_safety.py  test_epoch_rejection.py  test_epoching.py  test_filtering.py  test_ica.py  test_interpolation.py  test_io.py  test_placeholders.py  test_quality.py  test_reference.py  test_reports.py  test_resampling.py  test_transforms.py
