[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-preprocessing-pipeline"
version = "0.1.0"
description = "Automated EEG preprocessing and quality-control pipeline using MNE-Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "eeg-preprocessing-pipeline contributors" }
]
keywords = ["eeg", "mne", "preprocessing", "quality-control", "neuroscience"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mne>=1.6",
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
pipeline = [
    "pyprep>=0.4",
    "mne-icalabel>=0.7",
    "autoreject>=0.4",
]
dev = [
    "black>=24.0",
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
    "types-tqdm>=4.66",
    "jupyter>=1.0",
]

[project.scripts]
eeg-pipeline = "eeg_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = false
check_untyped_defs = true
ignore_missing_imports = true
warn_return_any = false
exclude = ["tests/_tmp"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
